fix: matching questions on mobile

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           UoM Blackboard theme
-@version        20231114.00.00
+@version        20231114.01.00
 @namespace      userstyles.world/user/adil192
 @description    Themes the blackboard UoM website to look more modern and use a consistent colour scheme.
 @author         adil192
@@ -629,6 +629,17 @@
   .takeQuestionDiv .matching-table td[width="50%"]:first-child td,
   #dataCollectionContainer .matching-table td[width="50%"]:first-child td {
     border-bottom: 0.5rem solid transparent;
+  }
+  @media only screen and (min-width: 0px) and (max-width: 736px) {
+    .takeQuestionDiv .matching-table > tbody > tr,
+    #dataCollectionContainer .matching-table > tbody > tr {
+      display: block;
+    }
+    .takeQuestionDiv .matching-table > tbody > tr > td,
+    #dataCollectionContainer .matching-table > tbody > tr > td {
+      display: block;
+      width: 100%;
+    }
   }
   .takeQuestionDiv .matching-table table[id^=readAnswers],
   #dataCollectionContainer .matching-table table[id^=readAnswers] {
